# container-playwright-pdf

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  project.env  pyproject.toml
.github/scripts/: load_env_vars.py
.github/workflows/: deploy.yml
app/: config.py  main.py  models.py  pdf_service.py
tests/: __init__.py  conftest.py  test_main.py  test_models.py  test_pdf_service.py
